--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -25,6 +25,7 @@
   }
 
   &-naked {
+
     &,
     ul {
       background-color: transparent;
@@ -48,7 +49,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
-  height: 54px;
+  height: 48px;
   width: 100%;
 }
 
@@ -74,13 +75,14 @@
 }
 
 .hide-search-bar {
+
   .top-bar-left,
   #search-options {
     display: none;
   }
 }
 
-.top-bar-right .menu > li {
+.top-bar-right .menu>li {
   display: inline-block;
   font-weight: 400;
 
@@ -99,7 +101,7 @@
       vertical-align: middle;
     }
 
-    &:hover > .submenu-items {
+    &:hover>.submenu-items {
       display: inline-block;
     }
   }
@@ -147,13 +149,13 @@
     height: inherit;
   }
 
-  .menu > li > &.kb-active {
+  .menu>li>&.kb-active {
     @media screen and (min-width: 55.99em) {
       height: 44px;
     }
   }
 
-  > #suggestions {
+  >#suggestions {
     width: 100%;
   }
 
@@ -162,7 +164,7 @@
     box-shadow: 0 2px 2px 0 $sttm-black, 0 0 0 1px $sttm-black;
   }
 
-  > button {
+  >button {
     color: $sttm-pure-white;
     display: inline-block;
     height: 44px;
@@ -232,20 +234,20 @@
   .dark-mode & {
     background-color: $sttm-lighter-black;
 
-    > .suggestion-active {
+    >.suggestion-active {
       background-color: $sttm-transparent-black;
     }
   }
 
-  > li {
-    > a {
+  >li {
+    >a {
       display: block;
       padding: 10px;
       width: 100%;
     }
   }
 
-  > .suggestion-active {
+  >.suggestion-active {
     background-color: $sttm-lighter-grey;
   }
 }
@@ -263,7 +265,7 @@
   position: relative;
   width: calc(100% - 110px);
 
-  &[value=''] + .clear-search-toggle {
+  &[value='']+.clear-search-toggle {
     pointer-events: none;
     visibility: hidden;
   }
@@ -402,7 +404,7 @@
     fill: $sttm-blue;
   }
 
-  .top-bar-left > & {
+  .top-bar-left>& {
     left: 0.5rem;
   }
 }
@@ -503,6 +505,7 @@
 }
 
 @media screen and (min-width: 40em) {
+
   .top-bar .top-bar-left,
   .top-bar .top-bar-right {
     width: 100%;
@@ -513,7 +516,9 @@
 @media screen and (min-width: 56em) {
   .top-bar-title a {
     background-image: url(/assets/images/sttm_icon.png);
-    width: 54px;
+    width: 46px;
+    background-position: bottom;
+    margin-top: 5px;
 
     &.doodle-link {
       background-image: url(/assets/images/sttm_icon.png) !important;
@@ -534,9 +539,9 @@
   }
 
   .menu {
-    .submenu > .submenu-items {
+    .submenu>.submenu-items {
       background-color: $sttm-white;
-      border: 1px solid $sttm-pure-white;
+      border: 1px solid $sttm-lighter-grey;
       display: none;
       position: absolute;
       right: 0;
@@ -545,7 +550,7 @@
 
       .dark-mode & {
         background-color: $sttm-light-black;
-        border-color: $sttm-pure-black;
+        border-color: $sttm-dark-grey;
       }
     }
   }
@@ -557,7 +562,7 @@
     justify-content: space-between;
     width: calc(100% - 70px);
 
-    > .top-bar-right {
+    >.top-bar-right {
       min-width: 470px;
       text-align: right;
     }
