--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,28 +1,27 @@
 /* stylelint-disable at-rule-no-unknown */
 
-@import
-  "mixin",
-  "colours",
-  "display-controls",
-  "error-page",
-  "footer",
-  "fonts",
-  "header",
-  "helpers",
-  "panktee",
-  "printer",
-  "results",
-  "search-page",
-  "shabad-page",
-  "sharing",
-  "sync",
-  "spinner",
-  "sundar-gutka",
-  "help",
-  "controller",
-  "banner",
-  "baani-link",
-  "vishraam";
+@import "mixin",
+"colours",
+"display-controls",
+"error-page",
+"footer",
+"fonts",
+"header",
+"helpers",
+"panktee",
+"printer",
+"results",
+"search-page",
+"shabad-page",
+"sharing",
+"sync",
+"spinner",
+"sundar-gutka",
+"help",
+"controller",
+"banner",
+"baani-link",
+"vishraam";
 
 html,
 body {
@@ -62,7 +61,8 @@ select {
 /* youtube responsive */
 .videoWrapper {
   height: 0;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 56.25%;
+  /* 16:9 */
   padding-top: 25px;
   position: relative;
 }
@@ -191,9 +191,9 @@ select {
   }
 
   &.fullscreen {
-    right: 28px;
+    right: 18px;
 
-    & + .scroll-to-top {
+    &+.scroll-to-top {
       right: 84px;
     }
   }
@@ -237,4 +237,8 @@ select {
 
 .fullscreen-view #freshworks-container {
   display: none;
+}
+
+#fullscreen {
+  fill: $sttm-orange;
 }
